# my-bot

./: .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.claude/commands/dev/: git-commit-push.md
.codex/environments/: environment.toml
.codex/skills/git-commit-guard/: SKILL.md
.cursor/: INSTRUCTIONS.md
.cursor/commands/: git-commit-push.md
src/my_bot/: __init__.py  main.py
tests/: test_main.py
